# JitPackSample

./: .gitignore  README.md  build.gradle  settings.gradle
sca-sdk/: CMakeLists.txt  build.gradle  configuration.properties  consumer-rules.pro  proguard-rules.pro  version.properties
sca-sdk/key/: keystore  sdk-sca
sca-sdk/src/abb/res/drawable/: bg_button_fast_pay.xml  ic_btn_back.xml
sca-sdk/src/abb/res/layout/: cell_accounts.xml  component_auth_consent.xml  fragment_dashboard.xml  fragment_registration.xml  fragment_terms_and_conditions.xml
sca-sdk/src/abb/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
sca-sdk/src/cl/res/drawable/: bg_button_outline.xml
sca-sdk/src/cl/res/values/: colors.xml  styles.xml
sca-sdk/src/ithmaar/res/drawable/: bg_button_outline.xml  input_bg_focused.xml  input_bg_unfocused.xml
sca-sdk/src/ithmaar/res/layout/: cell_accounts.xml  component_auth_consent.xml  component_auth_pin_view.xml  component_toolbar.xml  fragment_registration.xml
sca-sdk/src/ithmaar/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
sca-sdk/src/kfh/res/drawable/: bg_button_fast_pay.xml
sca-sdk/src/kfh/res/layout/: component_auth_consent.xml  component_auth_pin_view.xml  fragment_authentication.xml  fragment_registration.xml  fragment_terms_and_conditions.xml
sca-sdk/src/kfh/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
sca-sdk/src/khcb/res/drawable/: bg_button_fast_pay.xml  bg_button_outline.xml  ic_logo_registration.xml
sca-sdk/src/khcb/res/layout/: component_auth_consent.xml  fragment_dashboard.xml  fragment_registration.xml  fragment_terms_and_conditions.xml  layout_info_view.xml
sca-sdk/src/khcb/res/values/: colors.xml  strings.xml  styles.xml
sca-sdk/src/main/: AndroidManifest.xml
sca-sdk/src/main/cpp/: crypto.c  crypto.h
sca-sdk/src/main/res/drawable/: bg_button_fast_pay.xml  ic_btn_back.xml  ic_cross_red.xml  ic_notification.xml  ic_tick_round_selector.xml  ic_tick_teal.xml  ic_tick_white.xml  icon_check.xml  icon_close.xml
sca-sdk/src/main/res/layout/: activity_dashboard.xml  activity_dialog.xml  cell_accounts.xml  cell_consent.xml  component_auth_consent.xml  component_auth_pin_view.xml  component_obp_not_enabled.xml  component_progress.xml  (+11 more)
(+226 files in other folders)
